--- a/prj.conf
+++ b/prj.conf
@@ -1,8 +1,8 @@
-CONFIG_GPIO=y
-
 CONFIG_NRF_MODEM_LIB=y
 
 CONFIG_NETWORKING=y
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 CONFIG_NET_NATIVE=n
+
+CONFIG_BOOTLOADER_MCUBOOT=y
