--- a/prj.conf
+++ b/prj.conf
@@ -5,4 +5,13 @@ CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 CONFIG_NET_NATIVE=n
 
+CONFIG_NET_IPV4=y
+CONFIG_NET_IPV6=y
+
+CONFIG_SHELL=y
+CONFIG_SHELL_CMDS=y
+CONFIG_LOG=y
+CONFIG_DEVICE_SHELL=y
+CONFIG_KERNEL_SHELL=y
+
 CONFIG_BOOTLOADER_MCUBOOT=y
