--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,14 @@ cmake_minimum_required(VERSION 3.20.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(https_client)
 
+set(SRC_FILES
+    src/main.c
+
+    ## Modules
+    # Server Module
+    src/modules/server_module/nrf9160_setup.c
+)
+
 # NORDIC SDK APP START
-target_sources(app PRIVATE src/main.c)
+target_sources(app PRIVATE ${SRC_FILES})
 # NORDIC SDK APP END
