--- a/prj.conf
+++ b/prj.conf
@@ -8,10 +8,21 @@ CONFIG_NET_NATIVE=n
 CONFIG_NET_IPV4=y
 CONFIG_NET_IPV6=y
 
-CONFIG_SHELL=y
-CONFIG_SHELL_CMDS=y
-CONFIG_LOG=y
-CONFIG_DEVICE_SHELL=y
-CONFIG_KERNEL_SHELL=y
+# CONFIG_SHELL=y
+# CONFIG_SHELL_CMDS=y
+# CONFIG_LOG=y
+# CONFIG_DEVICE_SHELL=y
+# CONFIG_KERNEL_SHELL=y
+
+CONFIG_HEAP_MEM_POOL_SIZE=1024
+CONFIG_MAIN_STACK_SIZE=4096
+
+CONFIG_MODEM_KEY_MGMT=y
+CONFIG_LTE_LINK_CONTROL=y
+
+CONFIG_PDN=y
+CONFIG_PDN_ESM_STRERROR=y
+
+CONFIG_NEWLIB_LIBC=y
 
 CONFIG_BOOTLOADER_MCUBOOT=y
