Networking overhaul + posix support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SRC_FILES
     ## Modules
     # Server Module
     src/modules/server_module/nrf9160_setup.c
+    src/modules/server_module/socket.c
     src/modules/server_module/server_module.c
 )
 
