--- a/prj.posix.conf
+++ b/prj.posix.conf
@@ -1,11 +1,32 @@
 CONFIG_NETWORKING=y
+CONFIG_NET_UDP=y
+CONFIG_NET_TCP=y
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
+
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_TEST_RANDOM_GENERATOR=y
+CONFIG_INIT_STACKS=y
 
 CONFIG_NET_IPV4=y
 CONFIG_NET_IPV6=y
 
 CONFIG_HTTP_CLIENT=y
 
+CONFIG_NET_L2_ETHERNET=y
 CONFIG_HEAP_MEM_POOL_SIZE=1024
 CONFIG_MAIN_STACK_SIZE=4096
+
+CONFIG_ETH_NATIVE_POSIX=y
+CONFIG_ETH_NATIVE_POSIX_RANDOM_MAC=y
+
+# CONFIG_ETH_NATIVE_POSIX_DRV_NAME="tap0"
+
+CONFIG_NET_CONFIG_SETTINGS=y
+# CONFIG_NET_CONFIG_NEED_IPV6=y
+CONFIG_NET_CONFIG_NEED_IPV4=y
+# CONFIG_NET_CONFIG_MY_IPV6_ADDR="2001:db8::1"
+# CONFIG_NET_CONFIG_PEER_IPV6_ADDR="2001:db8::2"
+CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
+CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
+CONFIG_NET_CONFIG_MY_IPV4_GW="10.60.255.254"
