--- a/prj.posix.conf
+++ b/prj.posix.conf
@@ -11,6 +11,10 @@ CONFIG_INIT_STACKS=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_IPV6=y
 
+CONFIG_DNS_RESOLVER=y
+# CONFIG_MDNS_RESOLVER=y
+CONFIG_DNS_SERVER_IP_ADDRESSES=y
+
 CONFIG_HTTP_CLIENT=y
 
 CONFIG_NET_L2_ETHERNET=y
@@ -29,4 +33,7 @@ CONFIG_NET_CONFIG_NEED_IPV4=y
 # CONFIG_NET_CONFIG_PEER_IPV6_ADDR="2001:db8::2"
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
 CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
-CONFIG_NET_CONFIG_MY_IPV4_GW="10.60.255.254"
+CONFIG_NET_CONFIG_MY_IPV4_GW="192.0.2.2"
+
+CONFIG_DNS_SERVER1="192.0.2.2:5353"
+CONFIG_DNS_SERVER2="192.0.2.2:5353"
