Add TLS certificates (self-signed)

--- a/prj.posix.conf
+++ b/prj.posix.conf
@@ -11,6 +11,8 @@ CONFIG_INIT_STACKS=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_IPV6=y
 
+CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
+
 CONFIG_DNS_RESOLVER=y
 # CONFIG_MDNS_RESOLVER=y
 CONFIG_DNS_SERVER_IP_ADDRESSES=y
