Add basic TLS support with default config - prepare for switch to WolfSSL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ cmake_minimum_required(VERSION 3.20.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(https_client)
 
+set(gen_dir ${ZEPHYR_BINARY_DIR}/include/generated/)
+
 set(SRC_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c
 
@@ -17,6 +19,13 @@ set(SRC_FILES
     src/modules/server_module/nrf9160_setup.c
     src/modules/server_module/socket.c
     src/modules/server_module/server_module.c
+    src/modules/server_module/net_tools.c
+)
+
+generate_inc_file_for_target(
+    app
+    res/cert/server.der
+    ${gen_dir}/server.der.inc
 )
 
 # NORDIC SDK APP START
