--- a/prj.posix.conf
+++ b/prj.posix.conf
@@ -5,13 +5,12 @@ CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
 CONFIG_ENTROPY_GENERATOR=y
-CONFIG_TEST_RANDOM_GENERATOR=y
+# CONFIG_ENTROPY_DEVICE_RANDOM_GENERATOR=y
+# CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_INIT_STACKS=y
 
 CONFIG_NET_IPV4=y
 CONFIG_NET_IPV6=y
-
-CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
 
 CONFIG_DNS_RESOLVER=y
 # CONFIG_MDNS_RESOLVER=y
@@ -39,3 +38,36 @@ CONFIG_NET_CONFIG_MY_IPV4_GW="192.0.2.2"
 
 CONFIG_DNS_SERVER1="192.0.2.2:5353"
 CONFIG_DNS_SERVER2="192.0.2.2:5353"
+
+CONFIG_PTHREAD_IPC=y
+CONFIG_POSIX_CLOCK=y
+
+# CONFIG_WOLFSSL=y
+# CONFIG_WOLFSSL_BUILTIN=y
+
+
+CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
+
+
+CONFIG_MBEDTLS=y
+CONFIG_MBEDTLS_BUILTIN=y
+CONFIG_MBEDTLS_CFG_FILE="config-tls-generic.h"
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_RSA_ENABLED=y
+CONFIG_MBEDTLS_ENTROPY_ENABLED=y
+CONFIG_MBEDTLS_PSA_CRYPTO_C=y
+# CONFIG_MBEDTLS_TLS_VERSION_1_2=y
+CONFIG_MBEDTLS_ECP_C=y
+CONFIG_MBEDTLS_ECDH_C=y
+CONFIG_MBEDTLS_ECDSA_C=y
+CONFIG_MBEDTLS_ECP_ALL_ENABLED=y
+CONFIG_NET_TCP_MAX_RECV_WINDOW_SIZE=4096
+CONFIG_NET_TCP_MAX_SEND_WINDOW_SIZE=4096
+
+# CONFIG_MBEDTLS_PEM_CERTIFICATE_FORMAT=y
+
+CONFIG_MBEDTLS_HAVE_TIME_DATE=y
+
+# CONFIG_MBEDTLS_ENABLE_HEAP=y
+CONFIG_MAIN_STACK_SIZE=2536
+
+CONFIG_NEWLIB_LIBC=y
