--- a/prj.posix.conf
+++ b/prj.posix.conf
@@ -55,19 +55,43 @@ CONFIG_MBEDTLS_CFG_FILE="config-tls-generic.h"
 CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_RSA_ENABLED=y
 CONFIG_MBEDTLS_ENTROPY_ENABLED=y
 CONFIG_MBEDTLS_PSA_CRYPTO_C=y
-# CONFIG_MBEDTLS_TLS_VERSION_1_2=y
+CONFIG_MBEDTLS_DTLS=y
 CONFIG_MBEDTLS_ECP_C=y
 CONFIG_MBEDTLS_ECDH_C=y
 CONFIG_MBEDTLS_ECDSA_C=y
 CONFIG_MBEDTLS_ECP_ALL_ENABLED=y
-CONFIG_NET_TCP_MAX_RECV_WINDOW_SIZE=4096
-CONFIG_NET_TCP_MAX_SEND_WINDOW_SIZE=4096
+# CONFIG_NET_TCP_MAX_RECV_WINDOW_SIZE=4096 # NEED to enable this for large certs
+# CONFIG_NET_TCP_MAX_SEND_WINDOW_SIZE=4096 # ^^
 
 # CONFIG_MBEDTLS_PEM_CERTIFICATE_FORMAT=y
 
 CONFIG_MBEDTLS_HAVE_TIME_DATE=y
 
-# CONFIG_MBEDTLS_ENABLE_HEAP=y
-CONFIG_MAIN_STACK_SIZE=2536
+CONFIG_MBEDTLS_ENABLE_HEAP=y
+CONFIG_MBEDTLS_HEAP_SIZE=80000
+CONFIG_MAIN_STACK_SIZE=4096
 
-CONFIG_NEWLIB_LIBC=y
+CONFIG_NET_LOG=y
+# CONFIG_MBEDTLS_TLS_LIBRARY=y
+CONFIG_MBEDTLS_SSL_DEBUG_ALL=y
+CONFIG_MBEDTLS_DEBUG=y
+CONFIG_MBEDTLS_DEBUG_LEVEL=4
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDH_RSA_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDH_ECDSA_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_RSA_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_ECDSA_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_DHE_RSA_ENABLED=y
+CONFIG_MBEDTLS_DEBUG_C=y
+# CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=8192  # NEED TO ENABLE THIS WITH LARGE CERTS
+CONFIG_MBEDTLS_SSL_PROTO_DTLS=y
+CONFIG_NET_SOCKETS_LOG_LEVEL_DBG=y
+
+# CONFIG_MBEDTLS_SSL_HAN
+
+
+# CONFIG_NET_CAPTURE=y
+# CONFIG_NET_PKT_LOG_LEVEL_DBG=y
+# CONFIG_MBEDTLS_LOG_LEVEL_DBG=y
+# CONFIG_NET_CAPTURE_LOG_LEVEL_DBG=y
+
+# CONFIG_NEWLIB_LIBC=y
