--- a/prj.conf
+++ b/prj.conf
@@ -10,7 +10,8 @@ CONFIG_NET_IPV6=y
 
 CONFIG_HTTP_CLIENT=y
 
-CONFIG_HEAP_MEM_POOL_SIZE=1024
+# 100 KB
+CONFIG_HEAP_MEM_POOL_SIZE=102400
 CONFIG_MAIN_STACK_SIZE=4096
 
 CONFIG_MODEM_KEY_MGMT=y
@@ -18,6 +19,8 @@ CONFIG_LTE_LINK_CONTROL=y
 
 CONFIG_PDN=y
 CONFIG_PDN_ESM_STRERROR=y
+
+# CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
 
 # CONFIG_NEWLIB_LIBC=y
 
