Add CPP support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,26 +7,33 @@
 cmake_minimum_required(VERSION 3.20.0)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(https_client)
+project(orecart)
 
 set(gen_dir ${ZEPHYR_BINARY_DIR}/include/generated/)
 
 set(SRC_FILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/common/logging.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/common/tools.cpp
 
     ## Modules
     # Server Module
-    src/modules/server_module/nrf9160_setup.c
-    src/modules/server_module/socket.c
-    src/modules/server_module/server_module.c
-    src/modules/server_module/net_tools.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/modules/net_module/socket.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/modules/net_module/nrf9160_setup.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/modules/net_module/net_module.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/modules/net_module/net_scheduler.cpp
 )
 
-generate_inc_file_for_target(
-    app
-    res/cert/server_dos.der
-    ${gen_dir}/server_dos.der.inc
-)
+# target_include_directories(app PRIVATE
+#     ${CMAKE_CURRENT_SOURCE_DIR}/src/modules/net_module
+# )
+
+# generate_inc_file_for_target(
+#     app
+#     res/cert/server_dos.der
+#     ${gen_dir}/server_dos.der.inc
+# )
 
 # NORDIC SDK APP START
 target_sources(app PRIVATE ${SRC_FILES})
