--- a/prj.conf
+++ b/prj.conf
@@ -1,3 +1,9 @@
+CONFIG_CPP=y
+CONFIG_NEWLIB_LIBC_NANO=n
+CONFIG_CPP_EXCEPTIONS=y
+CONFIG_GLIBCXX_LIBCPP=y
+CONFIG_STD_CPP20=y
+
 CONFIG_NRF_MODEM_LIB=y
 
 CONFIG_NETWORKING=y
@@ -20,24 +26,6 @@ CONFIG_LTE_LINK_CONTROL=y
 CONFIG_PDN=y
 CONFIG_PDN_ESM_STRERROR=y
 
-# CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
-
-# CONFIG_NEWLIB_LIBC=y
-
-# CONFIG_MBEDTLS=y
-# CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_RSA_ENABLED=y
-# CONFIG_MBEDTLS_ENTROPY_ENABLED=y
-
-# CONFIG_NET_LOG=y
-# CONFIG_MBEDTLS_TLS_LIBRARY=y
-# CONFIG_MBEDTLS_SSL_DEBUG_ALL=y
-# CONFIG_MBEDTLS_DEBUG=y
-# CONFIG_MBEDTLS_DEBUG_LEVEL=4
-
-# CONFIG_MBEDTLS_KEY_EXCHANGE_ECDH_RSA_ENABLED=y
-# CONFIG_MBEDTLS_KEY_EXCHANGE_ECDH_ECDSA_ENABLED=y
-# CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_RSA_ENABLED=y
-# CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_ECDSA_ENABLED=y
-# CONFIG_MBEDTLS_KEY_EXCHANGE_DHE_RSA_ENABLED=y
+CONFIG_SPI=y
 
 CONFIG_BOOTLOADER_MCUBOOT=y
