--- a/prj.conf
+++ b/prj.conf
@@ -27,5 +27,11 @@ CONFIG_PDN=y
 CONFIG_PDN_ESM_STRERROR=y
 
 CONFIG_SPI=y
+CONFIG_GPIO=y
+
+# CONFIG_FPU=y
+# CONFIG_TFM_ENABLE_FP=y
+# CONFIG_NEWLIB_LIBC=y
+# CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 
 CONFIG_BOOTLOADER_MCUBOOT=y
