--- a/prj.conf
+++ b/prj.conf
@@ -16,6 +16,8 @@ CONFIG_NET_IPV6=y
 
 CONFIG_HTTP_CLIENT=y
 
+CONFIG_DISPLAY=y
+
 # 100 KB
 CONFIG_HEAP_MEM_POOL_SIZE=102400
 CONFIG_MAIN_STACK_SIZE=4096
