--- a/prj.conf
+++ b/prj.conf
@@ -31,6 +31,14 @@ CONFIG_PDN_ESM_STRERROR=y
 CONFIG_SPI=y
 CONFIG_GPIO=y
 
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+
+CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_LITTLEFS=y
+
+
 # CONFIG_FPU=y
 # CONFIG_TFM_ENABLE_FP=y
 # CONFIG_NEWLIB_LIBC=y
