--- a/Kconfig
+++ b/Kconfig
@@ -1,10 +1,10 @@
 menu "OreCart Hardware"
 
-config SAMPLE_TFM_MBEDTLS
-	bool "Use TF-M and MbedTLS"
-	help
-	  Use TF-M and MbedTLS in this sample instead of using
-	  the offloaded TLS stack in the modem.
+# config SAMPLE_TFM_MBEDTLS
+# 	bool "Use TF-M and MbedTLS"
+# 	help
+# 	  Use TF-M and MbedTLS in this sample instead of using
+# 	  the offloaded TLS stack in the modem.
 
 endmenu
 
