Fix build errors

--- a/prj.conf
+++ b/prj.conf
@@ -38,6 +38,8 @@ CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FILE_SYSTEM=y
 CONFIG_FILE_SYSTEM_LITTLEFS=y
 
+CONFIG_CHARACTER_FRAMEBUFFER=y
+CONFIG_CHARACTER_FRAMEBUFFER_USE_DEFAULT_FONTS=y
 
 # CONFIG_FPU=y
 # CONFIG_TFM_ENABLE_FP=y
