Hopeful fix for the demo

--- a/prj.conf
+++ b/prj.conf
@@ -26,6 +26,9 @@ CONFIG_LTE_LINK_CONTROL=y
 CONFIG_PDN=y
 CONFIG_PDN_ESM_STRERROR=y
 
+CONFIG_LOCATION=y
+CONFIG_NRF_CLOUD_AGNSS=y
+
 CONFIG_SPI=y
 
 CONFIG_BOOTLOADER_MCUBOOT=y
